2014-04-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 32527: Doc/Zsh/contrib.yo, Functions/Misc/zcalc,
	Functions/Zle/zcalc-auto-insert: zcalc-auto-insert widget
	for key binding in zcalc.

2014-04-06  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/options.yo: fix typo in option cross-reference

	* 32531: Src/Zle/zle_refresh.c, Src/Zle/zle_tricky.c, Src/hist.c:
	fix memory leaks detected by valgrind, two in ZLE region highlight
	and one in :A history modifier.

2014-04-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Sebastian Ramacher: 32533: Completion/Debian/Command/_apt: add
	completion for "apt-mark".

	* Alessandro Ghedini: 32532: Completion/Debian/Command/_apt:
	support 'apt' command.

	* 32530: llua: Completion/Unix/Command/_zfs: repeatable -o
	argument.

	* 32521: Doc/Zsh/params.yo: document that LOGNAME comes
	from getlogin().

2014-04-05  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 32528: Completion/Zsh/Command/_zstyle, Doc/Zsh/contrib.yo,
	Functions/VCS_Info/Backends/VCS_INFO_get_data_git,
	Misc/vcs_info-examples: vcs_info: Add check-for-staged-changes

	* 32528: Doc/Zsh/contrib.yo: vcs_info: Document 'post-backend'
	hook and bzr 'check-for-changes' support.

2014-03-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Danek Duvall: 32505: Completion/Unix/Command/_pgrep: improved
	Solaris compatibility for pgrep completion.

2014-03-23  Barton E. Schaefer  <schaefer@zsh.org>

	* m0viefreak: users/18660: Src/Zle/compresult.c,
	Src/Zle/zle_misc.c, Src/Zle/zle_refresh.c: fix auto-removable
	suffix highlighting

	* m0viefreak: users/18657: Completion/Unix/Command/_git: fix
	compadd for auto-removable suffix in _git_stash

	* m0viefreak: users/18655: Completion/Unix/Command/_git: fix
	compadd for auto-removable suffix in _git_commit_ranges

2014-03-21  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Takeshi Banse: 32502: Completion/Unix/Command/_git: fix typo
	in argument list.
